Spinner, toastr to sign-up form and email component, change sign-up form displaying

--- a/DjelatoWebClient/src/app/nav-bar/nav-bar.component.css
+++ b/DjelatoWebClient/src/app/nav-bar/nav-bar.component.css
@@ -10,12 +10,13 @@
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;  
   top: 0;
+  z-index: 100;
 }
 
 ::ng-deep .mat-toolbar.mat-primary{
