--- a/DjelatoWebClient/src/app/sign-up/sign-up.component.css
+++ b/DjelatoWebClient/src/app/sign-up/sign-up.component.css
@@ -3,8 +3,9 @@
     height: auto;
     border: 2px solid #00218f;
     border-radius: 10px;
-    margin: 10px auto;
+    margin: 50px auto;
     background-color: aliceblue;    
+    position: relative;
 }
 
 .form-name {
@@ -43,7 +44,7 @@ hr {
 }
 
 
-@media(max-width: 900px) and (min-width: 500px ) {
+@media(max-width: 900px) and (min-width: 640px ) {
     #signup-box {
         width: 400px;    
     }
@@ -55,7 +56,7 @@ hr {
     }
 }
 
-@media(max-width: 499px) {
+@media(max-width: 639px) {
     #signup-box {
         width: 280px;    
     }
@@ -89,10 +90,6 @@ hr {
 #button-select-file {
     width: 90px;
     margin: auto;
-}
-
-#imageButton {
-    color: white; 
 }
 
 ::ng-deep #avatar-button {
@@ -148,13 +145,13 @@ hr {
   width: 350px !important;
 }
 
-@media(max-width: 900px) and (min-width: 500px ) {
+@media(max-width: 900px) and (min-width: 640px ) {
     ::ng-deep .example-full-width{
         width: 350px !important;
       }
 }
 
-@media (max-width: 499px) {
+@media (max-width: 639px) {
     ::ng-deep .example-full-width{
         width: 250px !important;
     }
@@ -182,14 +179,35 @@ hr {
     flex-direction: row;
 }
 
-@media (max-width: 519px) {
-    .form-input-button {
-        flex-direction: column;
-    }
-}
-
 .form-input-button button {
     margin: 0 20px;
     margin-top: 40px;
+}
+
+.spinner-box {
+    height: 100%; 
+    width: 100%; 
+    z-index: 10; 
+    padding: 0px; 
+    position: absolute; 
+    border-radius: 10px;
+    background-color: #ffffff91;
+}
+
+::ng-deep mat-progress-spinner {
+    margin: 0px auto;
+    top: 40%;
+}
+
+@media(max-width: 900px) and (min-width: 640px ) {
+    ::ng-deep mat-progress-spinner {
+        top: 40%
+    }
+}
+
+@media (max-width: 639px) {
+    ::ng-deep mat-progress-spinner {
+        top: 40%
+    }
 }
 
