--- a/DjelatoWebClient/src/styles.css
+++ b/DjelatoWebClient/src/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Courgette|Indie+Flower|Roboto&display=swap');
 @import "~ngx-toastr/toastr.css";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 
 html, body {
