Login form without html makeup

--- a/DjelatoWebClient/src/app/login/login.component.html
+++ b/DjelatoWebClient/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div id="login-box">
+
+    <div class="form-name">
+        <p>Login form</p>
+    </div> 
+
+    <hr/>
+
+    <p class="server-error-message">
+      <strong>{{ message }}</strong>
+    </p> 
+
+
+</div>
+
