--- a/DjelatoWebClient/src/app/nav-bar/nav-bar.component.html
+++ b/DjelatoWebClient/src/app/nav-bar/nav-bar.component.html
@@ -31,6 +31,16 @@
           <span class="icon-description">Home</span>
         </a>
       </mat-list-item>
+      
+      <mat-divider></mat-divider>
+
+      <mat-list-item>
+        <a class="mat-list-links" mat-list-item routerLink="/login" routerLinkActive="active">
+          <mat-icon mat-list-icon>account_circle</mat-icon>
+          <span class="icon-description">Login</span>
+        </a>
+      </mat-list-item>
+
       <mat-divider></mat-divider>
 
       <mat-list-item>
@@ -39,6 +49,7 @@
           <span class="icon-description">Registration</span>
         </a>
       </mat-list-item>
+
       <mat-divider></mat-divider>
 
       <mat-list-item>
@@ -47,6 +58,7 @@
           <span class="icon-description">Confirm email</span>
         </a>
       </mat-list-item>
+
       <mat-divider></mat-divider>
 
     </mat-nav-list>
